11-04-2024:
- add changelog.txt
- i3lock module