@@ -1,3 +1,6 @@
 11-04-2024:
 - add changelog.txt
 - i3lock module
+- add Window swapping to i3:
+use (Mod)+Shift+arrows to swap windows, sometimes the diagnals will swap and idk how to fix it
+Normal window replacement is done wirh Mod4 (window key) and h j k l to not interfere with gaming
